[tool.poetry]
name = "llm_data_cleaner"
version = "0.1.0"
description = "A Python package for cleaning data using OpenAI API"
authors = ["Miklós Koren <koren@codedthinking.com>"]
readme = "README.md"
packages = [{include = "llm_data_cleaner"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.0.0"
pydantic = "^2.0.0"
jsonschema = "^4.0.0"
tqdm = "^4.65.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"